--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
-@import 'https://fonts.googleapis.com/css?family=Playfair+Display:400,700i,900i';
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700i,900i');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 
 * {
     box-sizing: border-box;
