--- a/client/src/routes/Lobby/index.module.scss
+++ b/client/src/routes/Lobby/index.module.scss
@@ -13,15 +13,27 @@
 
 .lobbyPlayers {
   padding-top: 2px;
+  display: block;
 
-  & span {
-    &:first-child {
-      padding-left: 0;
-    }
-
-    padding-left: 8px;
-    padding-right: 8px;
+  & div, span {
+    padding-left: 12px;
+    padding-right: 12px;
+    line-height: 28px;
     font-size: 20px;
     font-weight: bold;
+  }
+
+  & div {
+    display: inline-flex;
+
+    &:first-child {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    & svg {
+      margin: auto;
+      height: 100%;
+    }
   }
 }
