--- a/client/src/routes/User/index.module.scss
+++ b/client/src/routes/User/index.module.scss
@@ -1,17 +1,42 @@
 .Dashboard {
   text-align: center;
+  margin: 0 2em;
 
   h1 {
-    font-size: 40px;
+    font-size: 48px;
+    font-style: italic;
+    font-family: 'Playfair Display', serif;
+  }
+
+  & .Actions {
+    display: flex;
+    flex-direction: row;
+    margin: 0.5em 0 1em 0;
+
+    & button {
+      width: 100%;
+      height: 120px;
+      background-color: #3f51b5 !important;
+
+      color: white;
+      text-transform: uppercase;
+      font-size: 28px;
+      font-weight: bold;
+
+      border-radius: 12px;
+      border: 2px #3f51b5 solid;
+      outline: none !important;
+    }
   }
 
   & .Games {
     text-align: left;
-    margin: 0 auto;
-    min-width: 300px;
-    max-width: 800px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
 
     h2 {
+      margin: 0;
       font-size: 24px;
     }
   }
