fix issue with incorrect clients being sent updated on 'joined_game' event.

--- a/client/src/routes/Lobby/index.module.scss
+++ b/client/src/routes/Lobby/index.module.scss
@@ -14,8 +14,9 @@
 .HostHeader {
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
-  padding-bottom: 0.5em;
+  padding: 0.5em;
 
   h1 {
     margin: 0;
@@ -28,7 +29,6 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
-
 
 
 .Players {
