--- a/client/src/routes/Lobby/index.module.scss
+++ b/client/src/routes/Lobby/index.module.scss
@@ -7,6 +7,7 @@
 
 .Header {
   font-size: 36px;
+  font-family: 'Cabin', sans-serif;
   font-weight: bold;
   text-align: center;
 }
@@ -14,7 +15,8 @@
 .HostHeader {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  font-family: 'Cabin', sans-serif;
+  align-items: flex-start;
   justify-content: space-between;
   padding: 0.5em;
 
@@ -26,8 +28,12 @@
 }
 
 .SubHeader {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  max-height: 100px;
+  padding: 1em 0.5em;
+  display: flex;
+  flex: 0 0 auto;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
 
@@ -35,7 +41,7 @@
   padding-top: 2px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: minmax(160px, 1fr);
+  grid-template-rows: repeat(2, minmax(120px, 1fr));
 
   & div {
     display: inline-flex;
