--- a/packages/web-v2/src/index.css
+++ b/packages/web-v2/src/index.css
@@ -1,68 +1,41 @@
-:root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700i,900i");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
 
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+* {
+    box-sizing: border-box;
+}
 
-    font-synthesis: none;
+/* Disable link styles */
+a:hover,
+a:link {
+    text-decoration: none;
+}
+
+html,
+body {
+    font-family: "Playfair Display", serif;
+    color: rgba(172, 170, 190, 1);
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
-}
-a:hover {
-    color: #535bf2;
-}
-
-body {
-    margin: 0;
+    background-color: #3b3d54;
+    font-size: 14px;
     display: flex;
-    place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
+    flex-flow: column;
+    flex-grow: 1;
+    height: 100%;
+    flex-shrink: 0;
+    margin: 0;
 }
 
-h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
+h2,
+p {
+    font-family: "Cabin", sans-serif;
 }
 
-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-}
-button:hover {
-    border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-    :root {
-        color: #213547;
-        background-color: #ffffff;
-    }
-    a:hover {
-        color: #747bff;
-    }
-    button {
-        background-color: #f9f9f9;
-    }
+#root {
+    overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+    flex: 1;
 }
